# awsome-backend-all

./: .coverage  .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  folder_structure.txt  pyproject.toml  pytest.ini
app/: main.py
app/api/dependencies/: __init__.py  paginated.py  samples.py
app/api/v1/: api.py
app/api/v1/endpoints/: authentication.py  sample.py  tenants.py  users.py
app/core/: config.py  events.py  logging.py
app/core/settings/: app.py  base.py  development.py  production.py  test.py
app/db/: events.py  session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 226107d3f03b_base_commit.py
app/db/queries/: queries.py  queries.pyi
app/db/queries/sql/: samples.sql  users.sql
app/middleware/: error.py  request.py
app/models/: base.py  sample.py  user.py
app/repositories/: base.py  sample.py  tenants.py  users.py
app/schemas/: base.py  sample.py  users.py
tests/: conftest.py  fake_asyncpg_pool.py  test_main.py
tests/test_api/: test_samples.py
